# cifar10

./: .gitignore  README.md  audit.yaml  dataset_handler.py  install.sh  optimize-model.ipynb  optimize_fbd_model.ipynb  optimize_model.ipynb  optimize_target_model.ipynb  pyproject.toml  save-load.py  save_load.py  study.yaml  study_fbd.yaml  study_handler.py  train.yaml  train_baseline_target_model.ipynb  train_fbd_target_model.ipynb  train_models.ipynb  train_shadow_models.ipynb  train_target_models.ipynb  visualize_audit.ipynb  visualize_baseline_study.ipynb  visualize_fbd_study.ipynb  visualize_study.ipynb
models/: resnet18-model.py
src/: cifar_handler.py  dataclasses.py  dataset_handler.py  helper_scripts.py  optimize_fbd_model.py  save_load.py  study_handler.py  train_models.py  utils.py  visualize_model.py
src/models/: mlp_model.py  wideresnet28_model.py
study/cifar10-baseline-2-c3b5ae7b140f363a/: metadata.json  results.csv
study/cifar10-baseline-ae015ed20d1491eb/: metadata.json  results.csv
