[project]
name = "cifar10"
version = "0.1.0"
description = "Optimizing a ResNet-18 model on the Cifar-10 dataset using optuna."
requires-python = ">=3.11"

dependencies = [
    "plotly",
    "nbformat",
    "matplotlib",
    "jupyterlab",
    "ipywidgets",
    "torch==2.6.0+cu118",
    "torchvision==0.21.0+cu118",
    "torchaudio==2.6.0+cu118"
    "optuna",
    "optuna-integration[botorch]",
    "scikit-learn",
    "numpy",
    "pandas",
]

[tool.pip]
# Use PyTorch's custom index for CUDA 12.6 builds
extra-index-url = ["https://download.pytorch.org/whl/cu118"]
